[build-system]
requires = ["setuptools>=45", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-schedbench"
dynamic = ["version"]
description = "Scheduler benchmarking tool for the Flux resource manager"
readme = "README.md"
license = {text = "LGPL-3.0"}
requires-python = ">=3.6"
authors = [
  {name = "Mark A. Grondona", email = "mark.grondona@gmail.com"},
]
# flux-core (the flux Python package) is a required runtime dependency
# but is not available on PyPI — install it from source separately.
dependencies = []

[tool.setuptools.packages.find]
where = ["src/bindings/python"]
namespaces = true

[tool.setuptools]
script-files = ["src/cmd/flux-schedbench.py"]

[tool.setuptools_scm]
fallback_version = "0.1.0"

[tool.black]
target-version = ['py36']
force-exclude = "/^(env/|src/bindings/python/flux/utils)/"

[tool.isort]
profile = "black" # needed for black/isort compatibility


[tool.mypy]
python_version = "3.8"
files = [
  "src/bindings/python/flux/schedbench",
  "src/cmd/**/*.py",
  "t/python/*.py"]
mypy_path = ["src/bindings/python", "t/python/tap", "t/python"]
namespace_packages = true
explicit_package_bases = true
allow_redefinition = true
ignore_missing_imports = true
# Avoid spurious errors from stale cache state
cache_dir = "/dev/null"

  [[tool.mypy.overrides]]
  module = "subflux"
  ignore_errors = true
  follow_imports = "skip"

  [[tool.mypy.overrides]]
  module = "pycotap"
  ignore_errors = true
  follow_imports = "skip"
