nobase_fluxpy_PYTHON = \
	schedbench/__init__.py \
	schedbench/_ansi.py \
	schedbench/benchmarks.py \
	schedbench/bulkrun.py \
	schedbench/events.py \
	schedbench/job_watcher.py \
	schedbench/locality.py \
	schedbench/results.py \
	schedbench/sweep.py \
	schedbench/ui.py \
	schedbench/version.py

EXTRA_DIST = schedbench/version.py.in
DISTCLEANFILES = schedbench/version.py
